[package]
name = "cliquers"
version = "0.3.0"
authors = ["IdrisMiles <idris.miles@gmail.com>"]
edition = "2018"
description = "Manage filesequences with a common numeric component"
readme = "README.md"
repository = "https://github.com/IdrisMiles/cliquers"
documentation = "https://docs.rs/cliquers/0.0.1/cliquers"
license = "Apache-2.0"
keywords = ["filesequence", "vfx", "clique"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
strfmt = "0.1"
lazy_static = "1.4.0"
structopt = "0.3.13"
walkdir = "1"
